--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.napier.sem</groupId>
     <artifactId>sem</artifactId>
-    <version>1.0.0</version>
+    <version>0.1-alpha-2</version>
 
     <properties>
         <maven.compiler.source>14</maven.compiler.source>
