--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
           distribution: 'adopt'
       - name: Build with Maven
         run: mvn package
+      - name: Unit Tests
+        run: mvn -Dtest=com.napier.sem.AppTest test
       - name: Run docker compose
         run: docker compose up --abort-on-container-exit
 
