--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,9 @@
     </dependencies>
 
     <build>
+        <finalName>devopsethods</finalName>
         <plugins>
+            <!--1-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -43,6 +45,7 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
@@ -54,6 +57,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--2-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
