--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,13 +43,21 @@ jobs:
           docker stop employees
           docker rm employees
           docker image rm database
+      - name: Run tests and collect coverage
+        run: pytest --cov --cov-report=xml
+      - name: Upload coverage reports to Codecov
+        run: |
+          curl -Os https://cli.codecov.io/latest/linux/codecov
+          chmod +x codecov
+          ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
       - name: CodeCov
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: codecov/codecov-demo
           directory: ./target/site/jacoco
-          flags: Integration Tests # optional
-          verbose: true # optional (default = false)
+          flags: Integration Tests
+          verbose: true
   build:
     name: Build and Start Using docker compose
     runs-on: ubuntu-20.04
