--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
           docker stop employees
           docker rm employees
           docker image rm database
+      - name: Install Python Package
+        run: pip install pytest pytest-cov
       - name: Run tests and collect coverage
         run: pytest --cov --cov-report=xml
       - name: Upload coverage reports to Codecov
