--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,22 +43,21 @@ jobs:
           docker stop employees
           docker rm employees
           docker image rm database
-      - name: Install Python Package
-        run: pip install pytest pytest-cov
-      - name: Run tests and collect coverage
-        run: pytest --cov --cov-report=xml
-      - name: Upload coverage reports to Codecov
+      - name: Generate coverage report
         run: |
-          curl -Os https://cli.codecov.io/latest/linux/codecov
-          chmod +x codecov
-          ./codecov --verbose upload-process --fail-on-error -t ${{ secrets.CODECOV_TOKEN }} -n 'service'-${{ github.run_id }} -F service -f coverage-service.xml
-      - name: CodeCov
-        uses: codecov/codecov-action@v2
+          pip install pytest
+          pip install pytest-cov
+          pytest --cov=./ --cov-report=xml
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
         with:
+          directory: ./coverage/reports/
+          env_vars: OS,PYTHON
+          fail_ci_if_error: true
+          files: ./coverage1.xml,./coverage2.xml,!./cache
+          flags: unittests
+          name: codecov-umbrella
           token: ${{ secrets.CODECOV_TOKEN }}
-          slug: codecov/codecov-demo
-          directory: ./target/site/jacoco
-          flags: Integration Tests
           verbose: true
   build:
     name: Build and Start Using docker compose
