--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: A workflow for my Hello World App
+
 on:
   push:
     branches:
       - master
       - develop
       - lab08
+
 jobs:
   UnitTests:
     name: Unit Tests
@@ -14,13 +16,15 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Unit Tests
-        run: mvn -Dtest=com.napier.sem.AppTest test
+
+      - name: Run Unit Tests and Generate Coverage Report
+        run: mvn clean verify
 
   IntegrationTests:
     name: Integration Tests
@@ -30,12 +34,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Integration Tests and CodeCov
+
+      - name: Integration Tests and Docker Setup
         run: |
           docker build -t database ./db 
           docker run --name employees -dp 33060:3306 database
@@ -43,22 +49,17 @@ jobs:
           docker stop employees
           docker rm employees
           docker image rm database
-      - name: Generate coverage report
-        run: |
-          pip install pytest
-          pip install pytest-cov
-          pytest --cov=./ --cov-report=xml
+
+      - name: Generate Jacoco Coverage Report
+        run: mvn jacoco:report
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
         with:
-          directory: ./coverage/reports/
-          env_vars: OS,PYTHON
-          fail_ci_if_error: true
-          files: ./coverage1.xml,./coverage2.xml,!./cache
-          flags: unittests
-          name: codecov-umbrella
+          files: target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
-          verbose: true
+          fail_ci_if_error: true
+
   build:
     name: Build and Start Using docker compose
     runs-on: ubuntu-20.04
@@ -67,11 +68,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
+
       - name: Package and Run docker compose
         run: |
           mvn package -DskipTests
