--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,9 @@
 name: A workflow for my Hello World App
-
 on:
   push:
     branches:
       - master
       - develop
-      - lab08
-
 jobs:
   UnitTests:
     name: Unit Tests
@@ -16,15 +13,13 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-
-      - name: Run Unit Tests and Generate Coverage Report
-        run: mvn clean verify
+      - name: Unit Tests
+        run: mvn -Dtest=com.napier.sem.AppTest test
 
   IntegrationTests:
     name: Integration Tests
@@ -34,14 +29,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-
-      - name: Integration Tests and Docker Setup
+      - name: Integration Tests and CodeCov
         run: |
           docker build -t database ./db 
           docker run --name employees -dp 33060:3306 database
@@ -49,17 +42,13 @@ jobs:
           docker stop employees
           docker rm employees
           docker image rm database
-
-      - name: Generate Jacoco Coverage Report
-        run: mvn jacoco:report
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: CodeCov
+        uses: codecov/codecov-action@v4.0.1
         with:
-          files: target/site/jacoco/jacoco.xml
-          token: ${{ secrets.CODECOV_TOKEN }}
-          fail_ci_if_error: true
-
+          # token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          directory: ./target/site/jacoco
+          flags: Integration Tests # optional
+          verbose: true # optional (default = false)
   build:
     name: Build and Start Using docker compose
     runs-on: ubuntu-20.04
@@ -68,13 +57,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
-
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
-
       - name: Package and Run docker compose
         run: |
           mvn package -DskipTests
