--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,19 @@ jobs:
           docker stop employees
           docker rm employees
           docker image rm database
-      - name: CodeCov
-        uses: codecov/codecov-action@v4.0.1
+      - name: Set up Python
+        uses: actions/setup-python@v4
+
+      - name: Install dependencies
+        run: pip install pytest pytest-cov
+
+      - name: Run tests
+        run: pytest --cov --cov-report=xml
+
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./target/site/jacoco
   build:
     name: Build and Start Using docker compose
     runs-on: ubuntu-20.04
