--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,38 +23,33 @@ jobs:
 
   IntegrationTests:
     name: Integration Tests
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: recursive
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'adopt'
+
       - name: Integration Tests and CodeCov
         run: |
           docker build -t database ./db 
           docker run --name employees -dp 33060:3306 database
-          mvn -Dtest=com.napier.sem.AppIntegrationTest test jacoco:report          
+          mvn -Dtest=com.napier.gp3.AppIntegrationTest test jacoco:report
           docker stop employees
           docker rm employees
           docker image rm database
-      - name: Set up Python
-        uses: actions/setup-python@v4
-
-      - name: Install dependencies
-        run: pip install pytest pytest-cov
-
-      - name: Run tests
-        run: pytest --cov --cov-report=xml
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
   build:
     name: Build and Start Using docker compose
     runs-on: ubuntu-20.04
