--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           docker build -t database ./db 
           docker run --name employees -dp 33060:3306 database
-          mvn -Dtest=com.napier.gp3.AppIntegrationTest test jacoco:report
+          mvn -Dtest=com.napier.sem.AppIntegrationTest test jacoco:report
           docker stop employees
           docker rm employees
           docker image rm database
