--- a/pom.xml
+++ b/pom.xml
@@ -78,26 +78,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version> <!-- Latest compatible version with JUnit 5 -->
-                <configuration>
-                    <argLine>--enable-preview</argLine> <!-- Enables JUnit 5 to run -->
-                </configuration>
+                <version>3.0.0-M5</version>
             </plugin>
 
             <!-- Jacoco Plugin for Test Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version> <!-- Use latest version -->
+                <version>0.8.7</version> <!-- Use latest version -->
                 <executions>
                     <execution>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>verify</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
