Testing automated releasing

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,19 @@
     <build>
         <finalName>devopsethods</finalName>
         <plugins>
+            <!-- Maven Jar Plugin -->
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <!-- skip building the default-jar-->
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- Maven Assembly Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
